[gd_scene load_steps=14 format=3 uid="uid://5iurrb07epis"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_ueh2c"]
[ext_resource type="PackedScene" uid="uid://bqpwh2qhltcpn" path="res://Scenes/Rifle.tscn" id="2_kpw2n"]
[ext_resource type="PackedScene" uid="uid://c6p2b1t4cnw0x" path="res://Scenes/death_screen.tscn" id="2_ytsps"]
[ext_resource type="Texture2D" uid="uid://843ymq464tgw" path="res://Textures/Zombie Counter.png" id="3_157xr"]
[ext_resource type="FontFile" uid="uid://u72r7w2i21g6" path="res://BloodstainPersonalUseBold-1GM30.ttf" id="4_ox4va"]
[ext_resource type="Texture2D" uid="uid://tcb0ls8xdbrv" path="res://Textures/Health Bar Empty.png" id="6_3t5uh"]
[ext_resource type="Texture2D" uid="uid://c3legveoshv2p" path="res://Textures/Health Bar Full.png" id="7_gxxqk"]
[ext_resource type="AudioStream" uid="uid://dbf12ghsqqbil" path="res://Sounds/sfx/PlayerGotHit.mp3" id="8_bhrmw"]
[ext_resource type="Script" path="res://Scenes/TextureProgressBar.gd" id="8_c7561"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_xc2g5"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_sbgyl"]

[sub_resource type="Theme" id="Theme_yw6so"]

[sub_resource type="Theme" id="Theme_8fl74"]
Label/font_sizes/font_size = 25
Label/fonts/font = ExtResource("4_ox4va")

[node name="Player" type="CharacterBody3D" groups=["player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 7)
floor_max_angle = 1.0472
script = ExtResource("1_ueh2c")
death_screen = ExtResource("2_ytsps")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
cast_shadow = 0
mesh = SubResource("CapsuleMesh_xc2g5")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_sbgyl")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]
transform = Transform3D(1, 0, -2.84217e-14, 0, 1, -9.59255e-28, 2.84217e-14, 9.59255e-28, 1, 0, 0, 0)
current = true

[node name="Rifle" parent="Head/Camera3D" instance=ExtResource("2_kpw2n")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.196, -0.266, -0.543)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
mouse_filter = 2

[node name="CenterContainer" type="CenterContainer" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Top" type="Line2D" parent="UI/CenterContainer"]
points = PackedVector2Array(0, -5, 0, -15)
width = 2.0

[node name="Bottom" type="Line2D" parent="UI/CenterContainer"]
points = PackedVector2Array(0, 5, 0, 15)
width = 2.0

[node name="Left" type="Line2D" parent="UI/CenterContainer"]
points = PackedVector2Array(-5, 0, -15, 0)
width = 2.0

[node name="Right" type="Line2D" parent="UI/CenterContainer"]
points = PackedVector2Array(5, 0, 15, 0)
width = 2.0

[node name="ZombieCounter" type="Sprite2D" parent="UI"]
position = Vector2(964, 61)
texture = ExtResource("3_157xr")

[node name="KillCounter" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 13.9999
offset_top = 33.0
offset_right = 78.0
offset_bottom = 56.0
grow_horizontal = 2
scale = Vector2(2.96199, 2.10772)
theme = SubResource("Theme_yw6so")
text = "0
"

[node name="TitleMessage" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -245.0
offset_top = 55.0
offset_right = 256.0
offset_bottom = 118.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label2" type="Label" parent="UI"]
layout_mode = 0
offset_left = 981.0
offset_top = 90.0
offset_right = 1075.0
offset_bottom = 118.0
theme = SubResource("Theme_8fl74")
text = "Killed"
uppercase = true

[node name="Label" type="Label" parent="UI"]
layout_mode = 2
offset_left = 262.0
offset_top = 1039.0
offset_right = 356.0
offset_bottom = 1067.0
theme = SubResource("Theme_8fl74")
text = "Health"
uppercase = true

[node name="TextureProgressBar" type="TextureProgressBar" parent="UI" node_paths=PackedStringArray("player")]
layout_mode = 0
offset_left = 19.0
offset_top = 976.0
offset_right = 462.0
offset_bottom = 1062.0
scale = Vector2(0.76, 0.88)
value = 30.0
texture_under = ExtResource("6_3t5uh")
texture_progress = ExtResource("7_gxxqk")
script = ExtResource("8_c7561")
player = NodePath("../..")

[node name="Highscore" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.164
anchor_bottom = 0.137
offset_left = 24.0
offset_top = 30.0
offset_right = -127.88
offset_bottom = -74.96
theme_override_fonts/font = ExtResource("4_ox4va")
theme_override_font_sizes/font_size = 30
text = "Highscore: "

[node name="HighscoreNumber" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.164
anchor_bottom = 0.137
offset_left = 185.0
offset_top = 33.0
offset_right = -106.88
offset_bottom = -71.96
theme_override_font_sizes/font_size = 30
text = "0"

[node name="Sounds" type="Node3D" parent="."]

[node name="GotHit" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("8_bhrmw")

[node name="Timer" type="Timer" parent="."]
wait_time = 300.0

[connection signal="ability_granted" from="." to="." method="_on_ability_granted"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
